# SlaPyShot

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yml
API/: index.html
assets/readme/: index.html
changelog/: index.html
contributing/: index.html
docs/: API.md  contributing.md  getting_started.md  index.md  schedules.md  teams.md
docs/vignettes/: games.md  players.md  schedules.md  teams.md
getting_started/: index.html
search/: search_index.json
src/slapyshot/: __init__.py  client.py  helpers.py
src/slapyshot/endpoints/: games.py  players.py  schedule.py  teams.py
src/slapyshot/models/: __init__ (1).py
tests/: test_client.py  test_games.py  test_helpers.py  test_players.py  test_schedule.py  test_teams.py
vignettes/games/: index.html
vignettes/players/: index.html
vignettes/schedules/: index.html
vignettes/teams/: index.html
